--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title><%= title %></title>
+    <meta name="viewport" content= "width=device-width, initial-scale=1.0"> 
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
   </head>
   <body onLoad="ready()">
-    <div class="ui grid container centered">
+    <div class="ui grid doubling stackable container centered">
       <div class="eight wide column centered">
         <h1>What is Evan's blood sugar?</h1>
           <h2><%= guessPhrase %></h2>
