--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
               <h4 id="hint"></h4>
               <h4 id="correct-notice">Within the next 5 minutes, Evan will have a new blood sugar and you can play again!</h4>
               <p id="high-info">For Evan, <span id="bg"></span> mg/dL is a high blood sugar.  <a href="https://www.jdrf.org/t1d-resources/about/symptoms/high-blood-sugar/">Learn more about high blood sugar.</a></p>
-              <p id="normal-info">For Evan, <span id="bg"></span> mg/dL is normal.*  Woohoo!</p>
+              <p id="normal-info">For Evan, <span id="bg"></span> mg/dL is normal.  Woohoo!</p>
               <p id="low-info">For Evan, <span id="bg"></span> mg/dL is a low blood sugar.  <a href="https://www.jdrf.org/t1d-resources/about/symptoms/low-blood-sugar/">Learn more about low blood sugar.</a></p>
               <small id="info-disclaimer">This isn't medical advice, just commentary.</small>
             </div>
