update JDRF links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,9 +70,8 @@
                   <h4>How can I help?</h4>
                   <p>Here's a few ways you can learn more about type one diabetes and support type one diabetes research to find a cure:</p>
                   <ul>
-                    <li><a href="https://www.jdrf.org/donate/">Donate to JDRF</a></li>
+                    <li><a href="http://bit.ly/TeamEvan2019guess">Support Evan in the 2019 JDRF One Walk to Cure Diabetes</a></li>
                     <li>Ask a friend who lives with type one diabetes to tell you about it</li>
-                    <li><a href="https://www2.jdrf.org/site/SPageServer?pagename=walk_homepage">Join a JDRF One Walk to Cure Diabetes Team</a></li>
                     <li><a href="https://www.jdrf.org/impact/advocacy/insulin-access/">Support efforts to lower insulin prices in the US</a></li>
                   <ul>
                 </li>
